# sdl-example

./: .editorconfig  .gitignore  CMakeLists.txt  README.md
cmake/: SDL.cmake
src/: main.c
